# GeometryExploder

./: CMakeLists.txt  README.txt  camera.h  main.cpp  mesh.h  model.h  model_settings_controller.cpp  model_settings_controller.h  shader_controller.cpp
resources/Eye/: Eye.mb
resources/FLY/: FLYL.MAX  FLYM.MAX  FLYV.MAX  fly.mtl
resources/FLY/maps/: Tex__1_Noise.tga  Tex__2_Noise.tga  Tex__3_Gradient.tga  Thumbs.db
resources/Nano_suit/: Nanosuit.mtl
resources/arnold/arnold/: arny 1.3ds
